# cover-letter-ai

./: .gitignore  README.md  openmemory.md
apps/api/: README.md  env.example  pyproject.toml  railway.json  template.docx
apps/api/app/: __init__.py  errors.py  logging.py  main.py  models.py  paths.py  settings.py
apps/api/app/routes/: __init__.py  generate.py  job_preview.py
apps/api/app/services/: __init__.py  cv_text.py  docx_render.py  firecrawl_text.py  google_places.py  job_extract.py  llm_letter.py
apps/api/app/utils/: __init__.py  dates.py  strings.py
apps/api/cover_letter_ai_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/docs/: integrations.md
apps/web/: env.example  package-lock.json  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AppShell.tsx  GeneratorForm.tsx
apps/web/src/components/ui/: button.tsx  card.tsx  file-upload.tsx  input.tsx  select.tsx  tabs.tsx  textarea.tsx
apps/web/src/lib/: contentDisposition.ts  env.ts  http.ts
